fix: delete buttons with insufficient contrast, missing h1 title and redundant alt attributes

--- a/frontend/src/Components/Header.scss
+++ b/frontend/src/Components/Header.scss
@@ -6,6 +6,10 @@
   color: #FFF;
   padding: 1em 2em;
 
+  &__logo {
+    margin: 0;
+  }
+
   &__nav {
     margin: 0;
     padding: 1em 0 0;
