--- a/frontend/src/Home/Post.scss
+++ b/frontend/src/Home/Post.scss
@@ -47,7 +47,7 @@
   }
 
   &__delete {
-    color: #ff4444;
+    color: #CC0000;
     float: right;
     background: none;
     border: none;
