--- a/frontend/src/Home/Profile.scss
+++ b/frontend/src/Home/Profile.scss
@@ -30,7 +30,7 @@
   }
 
   &__delete {
-    color: #ff4444;
+    color: #CC0000;
     float: right;
     background: none;
     border: none;
